--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,7 +1,7 @@
 - layout: left
-  name: Georgia Institute of Technology
-  dates: January 2021 - Present
-  qualification: M.S. Computer Science
+  name: Arizona State University
+  dates: August 2020 - Present
+  qualification: M.C.S. (Cybersecurity)
   description: |
     The coursework for my M.S. program is currently in progress. My studies revolve around web application development alongside industry best practices of security and scalability.
 - layout: left
