--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,7 +3,7 @@
   dates: August 2020 - Present
   qualification: M.C.S. (Cybersecurity)
   description: |
-    The coursework for my M.S. program is currently in progress. My studies revolve around web application development alongside industry best practices of security and scalability.
+    The coursework for my M.C.S. program is currently in progress. My studies revolve around web application development alongside industry best practices of security and scalability.
 - layout: left
   name: Temple University
   dates: August 2018 - May 2020
