--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,13 +3,13 @@
   dates: August 2020 - Present
   qualification: M.C.S. (Cybersecurity)
   description: |
-    The coursework for my M.C.S. program is currently in progress. My studies revolve around web application development alongside industry best practices of security and scalability.
+    My MCS studies revolve around web application development alongside industry best practices of security, stability, and scalability. This degree is a "Master of Computer Science" with a concentration in Cybersecurity.
 - layout: left
   name: Temple University
   dates: August 2018 - May 2020
   qualification: B.S. Computer Science
   description: |
-    All of my current college course-work has been leading up to this finale. Through completing my B.S. at Temple University, I have gained the skills and knowledge required to advance in the field of computer science and software development.
+    By completing my B.S. at Temple University I have gained the skills and knowledge required to advance in the field of computer science and software development.
 - layout: left
   name: Bucks County Community College
   dates: August 2018 - August 2019
