--- a/_data/education.yml
+++ b/_data/education.yml
@@ -9,7 +9,7 @@
   dates: August 2018 - May 2020
   qualification: B.S. Computer Science
   description: |
-    By completing my B.S. at Temple University I have gained the skills and knowledge required to advance in the field of computer science and software development.
+    By completing my B.S. at Temple University I have gained the skills and knowledge required to advance in the field of computer science and software engineering.
 - layout: left
   name: Bucks County Community College
   dates: August 2018 - August 2019
