--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -7,3 +7,10 @@
     Every day, our 110,000 employees come to work with one focus – our customers’ missions. Whether it's protecting citizens or advancing the boundaries of science, these missions are some of the most important and challenging in the world. We bring an unwavering commitment to help our customers succeed, and it’s that sense of purpose and opportunity to make a difference in the world that drives us every day.
   description: |
     At Lockheed Martin I work with a team of individuals on full-stack applications in various enterprises.
+- layout: left
+  company: Lockheed Martin Corporation
+  link: lockheedmartin.com
+  job_title: New Hire & Intern Mentor
+  dates: May 2021 - September 2021
+  description: |
+    As a New Hire & Intern Mentor, I spent time educating newly hired employees and internship employees about Lockheed Martin Corporation. I also ensured that their day-to-day transitions in their current roles went smoothly.
