--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,7 +3,7 @@
   dates: August 2020 - Present
   qualification: M.C.S. (Cybersecurity)
   description: |
-    My MCS studies revolve around web application development alongside industry best practices of security, stability, and scalability. This degree is a "Master of Computer Science" with a concentration in Cybersecurity.
+    My M.C.S. studies revolve around web application development alongside industry best practices of security, stability, and scalability. This degree is a "Master of Computer Science" with a concentration in Cybersecurity.
 - layout: left
   name: Temple University
   dates: August 2018 - May 2020
