--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,9 +1,9 @@
 - layout: left
   name: Arizona State University
   dates: August 2020 - Present
-  qualification: M.C.S. (Cybersecurity)
+  qualification: M.S. Computer Science (Cybersecurity Concentration)
   description: |
-    My M.C.S. studies revolve around web application development alongside industry best practices of security, stability, and scalability. This degree is a "Master of Computer Science" with a concentration in Cybersecurity.
+    My M.S. studies revolve around web application development alongside industry best practices of security, stability, and scalability. This degree is "Master of Science: Computer Science" with a concentration in Cybersecurity.
 - layout: left
   name: Temple University
   dates: August 2018 - May 2020
